--- a/PytorchAndroid/app/build.gradle
+++ b/PytorchAndroid/app/build.gradle
@@ -5,6 +5,7 @@ android {
     defaultConfig {
         applicationId "com.johnolafenwa.pytorchandroid"
         minSdkVersion 21
+        //noinspection ExpiredTargetSdkVersion
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
